unpackaged/main/default/objects/project_cloud__Project_Status__c/project_cloud__Project_Status__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting has been deprecated, the status&#39; are now implemented using custom labels</description>
    <label>Deprecated (Project Status&#39;)</label>
</CustomObject>