unpackaged/main/default/objects/project_cloud__Project_Status__c/fields/project_cloud__Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed__c</fullName>
    <defaultValue>&quot;Completed&quot;</defaultValue>
    <label>Deprecated (Completed)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>