unpackaged/main/default/objects/project_cloud__Project_Status__c/fields/project_cloud__In_Progress__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__In_Progress__c</fullName>
    <defaultValue>&quot;In Progress&quot;</defaultValue>
    <label>Deprecated (In Progress)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>