unpackaged/main/default/objects/project_cloud__Project_Status__c/fields/project_cloud__Not_Started__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Not_Started__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Deprecated (Not Started)</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>